2003-02-07 19:21  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSAttributedString (-setAttributes:range:): Fix memory
	leak.

2003-02-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Sourcewin32-def.top: Remove recently added external functions.
	* Source/libgnustep-base.def.in: Regenerated to just contain
	public classes.  The manual hacks are no longer needed as the
	make system now handles inclusion of symbols from subprojects
	in dlls.

2003-02-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Sourcewin32-def.top: Manually added external functions.
	* Source/libgnustep-base.def.in: Regenerated to combine external
	functions and all public classes.
	* Source/NSConnection.m: ([-init]) creates a connection usable as
	a server.

2003-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Implement new MacOS-X isLoaded method.
	* Headers/gnustep/base/NSBundle.h: ditto

2003-02-04  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Headers/gnustep/base/GSInvocation.h (CLEAR_RETURN_VALUE_IF_OBJECT):
	* New macro, if invocation returns object release it.
	(RETAIN_RETURN_VALUE): New macro, if invocation returns object
	release it.
	* Source/NSInvocation.m ([NSInvocation -dealloc]): Implement RELEASE
	* return object
	([NSInvocation -setReturnValue:]) Implement RETAIN/RELEASE on return
	object ([NSInvocation -invokeWithTarget:]): Implement RETAIN/RELEASE
	on return object,
	fixed  _validReturn flag setting
	* Source/GSFFIInvocation.m ([GSFFIInvocation -invokeWithTarget:]): 
	Fix _validReturn flag setting, Implement RETAIN/RELEASE on return
	object.
	* Source/GSFFCallInvocation.m ([GSFFCallInvocation
	* -invokeWithTarget:]): 
	Fix _validReturn flag setting.  Implement RETAIN/RELEASE on return
	object.

2003-02-04  Adam Fedor  <fedor@Eldorado.local.>

	* Headers/gnustep/base/.cvsignore: Don't include config.h.in
	* Documentation/.cvsignore: Don't include *texi
	* Source/Additions/GSXML.h: Fix up GSXLM.h include on MacOSX
