@@ -1,3 +1,9 @@
+2003-02-10 13:56  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/NSRunLoop.m [HAVE_POLL] (-pollUntil:within:): Set fdEnd
+	to pollfds_count instead of setting it separately (which was being
+	done incorrectly).
+
 2003-02-07 19:21  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/GSAttributedString (-setAttributes:range:): Fix memory
